@@ -484,6 +484,7 @@ exit 0
 %changelog
 * Sun Feb 22 2004 Jeff Johnson <jbj@jbj.org> 4.3-0.14
 - add ia32e arch.
+- stable sort for policy specifications, patterns before paths.
 
 * Fri Feb 20 2004 Jeff Johnson <jbj@jbj.org> 4.3-0.13
 - fix: only first "mkdir -p" directory had context set.
